# AnycubicSlicer_Prusa

./: .dockerignore  .gitignore  Build.PL  CMakeLists.txt  Dockerfile  Info.plist  Makefile  MakefileLinux  MakefileMacos  README.md  build_win.bat  docker-compose.yaml  main.py  version.inc
cmake/modules/: FindEXPAT.cmake  FindNLopt.cmake
doc/: Dependencies.md  How to build - Linux et al.md  How to build - Mac OS.md  How to build - Windows.md  Localization_guide.md
resources/: AnycubicSlicer.icns
resources/anycubicProfiles/: profile.ini
resources/localization/: AnycubicSlicer.pot  list.txt
resources/localization/be/: PrusaSlicer.mo  (+1 more)
resources/profiles/: Anycubic.idx  Anycubic.ini  Sovol.idx  Sovol.ini  Trimaker.idx
src/: AnycubicSlicer.cpp  AnycubicSlicer_app_msvc.cpp  CMakeLists.txt
src/admesh/: CMakeLists.txt  stl.h  stlinit.cpp  stream.h  stream_linux.ipp  stream_macos.ipp  stream_windows.ipp
src/avrdude/: ac_cfg.h
src/build-utils/: CMakeLists.txt
src/clipper/: CMakeLists.txt
src/eigen/Eigen/: CMakeLists.txt
src/glu-libtess/: CMakeLists.txt
src/hints/: HintsToPot.cpp
src/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_internal.h  imgui_widgets.cpp
src/libigl/: CMakeLists.txt
src/libslic3r/: AppConfig.cpp  AppConfig.hpp  Arrange.cpp  Arrange.hpp  CMakeLists.txt  Config.cpp  Config.hpp  CustomGCode.hpp  Emboss.cpp  Emboss.hpp  Extruder.cpp  Extruder.hpp  ExtrusionRole.cpp  Flow.hpp  GCode.cpp  GCode.hpp  GCodeReader.hpp  GCodeWriter.cpp  GCodeWriter.hpp  Geometry.cpp  Geometry.hpp  Layer.cpp  Layer.hpp  LayerRegion.cpp  MeshBoolean.cpp  Model.cpp  Model.hpp  PerimeterGenerator.cpp  PlaceholderParser.cpp  PlaceholderParser.hpp  Platform.cpp  Polyline.cpp  Polyline.hpp  Preset.cpp  Preset.hpp  PresetBundle.cpp  PresetBundle.hpp  Print.cpp  Print.hpp  PrintApply.cpp  (+26 more)
src/miniz/: CMakeLists.txt
src/qoi/: CMakeLists.txt  qoilib.c
src/semver/: CMakeLists.txt
src/slic3r/: CMakeLists.txt
src/tcbspan/: README.md
tests/fff_print/: test_custom_gcode.cpp  test_fill.cpp
tests/libslic3r/: test_arachne.cpp  test_cut_surface.cpp  test_emboss.cpp  test_geometry.cpp  test_placeholder_parser.cpp
tests/sla_print/: CMakeLists.txt
tests/slic3rutils/: CMakeLists.txt
(+315 files in other folders)
